# GaussCam

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION.md  OUTPUT.md  PERFORMANCE.md  PRODUCTION.md  README.md  USAGE.md  main.py  pyproject.toml  requirements.txt
.github/: ACTIVITY_GUIDE.md  PULL_REQUEST_TEMPLATE.md  discussions.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py
backend/compress/: __init__.py  core.py
backend/depth/: __init__.py  depth_anything_v2_wrapper.py  midas_wrapper.py
backend/gaussian/: __init__.py  fitter.py  four_d.py  merger.py
backend/input/: __init__.py  capture.py
backend/instant/: __init__.py  initializer.py
backend/renderer/: __init__.py  base.py  cuda_renderer.py  manager.py  mps_renderer.py  webgpu_renderer.py
backend/scene/: __init__.py  temporal_graph.py
backend/slam/: __init__.py  hybrid_slam.py
backend/tests/: __init__.py  test_camera.py  test_compression.py  test_gaussian.py  test_gpu_detection.py  test_hybrid_slam.py  test_instant_initializer.py  test_optimization.py  test_point_cloud.py  test_renderer_manager.py  test_temporal_gaussian.py
backend/ui/: __init__.py  main_window.py  render_widget.py  viewer_3d.py
backend/utils/: __init__.py  adaptive_quality.py  camera.py  config.py  export.py  gpu_detection.py  logging_config.py  memory.py  novel_view.py  optimization.py  point_cloud.py  (+3 more)
examples/: novel_view_demo.py  save_load_gaussians.py  video_demo.py  webcam_demo.py
(+3 files in other folders)
